--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -12,8 +12,7 @@
     </div>
     <form method="post" enctype="multipart/form-data">
         <input asp-for="Product.Id" hidden />
-        <input asp-for="Product.ImageUrl" hidden />
-        <div class="row">
+          <div class="row">
             <div class="col-10">
                 <div class="border p-3">
                     <div class="mb-3 row p-1">
@@ -57,8 +56,9 @@
                     </div>
 
                     <div class="mb-3 row p-1">
-                        <label asp-for="Product.ImageUrl" class="p-0"> </label>
-                        <input type="file" name="file" class="form-control" />
+                        <label asp-for="Product.ProductImages" class="p-0"> </label>
+                        <input type="file" name="files" class="form-control" multiple />
+
                     </div>
 
                     <div class="mb-3 row p-1">
@@ -99,7 +99,19 @@
                 </div>
             </div>
             <div class="col-2">
-                <img src="@Model.Product.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bbb9b9" />
+                @if(Model.Product.ProductImages != null)
+                {
+                    foreach (var image in Model.Product.ProductImages)
+                    {
+                        <div class="border p-1 m-2 text-center">
+                             <img src="@image.ImageUrl" width="100%"
+                             style="border-radius:5px; border:1px solid #bbb9b9" />
+                            <a asp-action="DeleteImage" class="btn btn-danger" asp-route-imageId="@image.Id">
+                                <i class="bi bi-trash-fill"></i>Delete
+                            </a>
+                         </div>
+                    }
+                }
             </div>
         </div>
 
