--- a/BulkyWeb/Views/Shared/_Layout.cshtml
+++ b/BulkyWeb/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
     </div>
 
     <footer class="border-top footer bg-primary text-muted">
-        <div class="container">
+        <div class="container text-white">
             Made with <i class="bi bi-heart-fill"></i> by Styvien
         </div>
     </footer>
